implementacion gastos administrativos

--- a/cajaAhorros/app_cajaAhorros/templates/base.html
+++ b/cajaAhorros/app_cajaAhorros/templates/base.html
@@ -47,7 +47,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item mb-2">
-                                    <a class="nav-link text-white {% if 'prestamo' in request.path %}active{% endif %}" href="{% url 'prestamo_list' %}">
+                                    <a class="nav-link text-white {% if 'gastos' in request.path %}active{% endif %}" href="{% url 'gastos_admin' %}">
                                         <i class="bi bi-cash-stack me-2"></i> Gastos Administrativos
                                     </a>
                                 </li>
