cambios lista de prestamos

--- a/cajaAhorros/app_cajaAhorros/templates/gastos/gastos_admin_list.html
+++ b/cajaAhorros/app_cajaAhorros/templates/gastos/gastos_admin_list.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2 class="mb-3">Gastos Administrativos</h2>
+    <h2 class="mb-3">Para Gastos Administrativos</h2>
     <a href="{% url 'gastos_administrativos_action' 'agregar' %}" class="btn btn-primary mb-3">
-        <i class="bi bi-plus-circle"></i> Nuevo Gasto
+        <i class="bi bi-plus-circle"></i> Registrar
     </a>
 
     <table class="table table-bordered">
