--- a/cajaAhorros/app_cajaAhorros/templates/gastos/gastos_admin_list.html
+++ b/cajaAhorros/app_cajaAhorros/templates/gastos/gastos_admin_list.html
@@ -3,6 +3,18 @@
 {% block title %}Gastos Administrativos{% endblock %}
 
 {% block content %}
+<!-- botones de exportacion pdf, xls, imprimir -->
+<div class="mb-3 d-flex gap-2 flex-wrap">
+    <a href="{% url 'exportar_gastos_pdf' %}" class="btn btn-danger btn-sm" target="_blank">
+        <i class="bi bi-file-earmark-pdf"></i> Exportar PDF
+    </a>
+    <a href="{% url 'exportar_gastos_excel' %}" class="btn btn-success btn-sm" target="_blank">
+        <i class="bi bi-file-earmark-excel"></i> Exportar Excel
+    </a>
+    <a href="" target="_blank" class="btn btn-info btn-sm">
+        <i class="bi bi-printer"></i> Imprimir Socios
+    </a>
+</div>
 <div class="container mt-4">
     <h2 class="mb-3">Para Gastos Administrativos</h2>
     <a href="{% url 'gastos_administrativos_action' 'agregar' %}" class="btn btn-primary mb-3">
