--- a/cajaAhorros/app_cajaAhorros/templates/prestamo/prestamo_list.html
+++ b/cajaAhorros/app_cajaAhorros/templates/prestamo/prestamo_list.html
@@ -2,6 +2,18 @@
 {% load static %}
 
 {% block content %}
+<!-- botones de exportacion pdf, xls, imprimir -->
+<div class="mb-3 d-flex gap-2 flex-wrap">
+    <a href="{% url 'exportar_prestamos_pdf' %}" class="btn btn-danger btn-sm" target="_blank">
+        <i class="bi bi-file-earmark-pdf"></i> Exportar PDF
+    </a>
+    <a href="{% url 'exportar_prestamos_excel' %}" class="btn btn-success btn-sm" target="_blank">
+        <i class="bi bi-file-earmark-excel"></i> Exportar Excel
+    </a>
+    <a href="" target="_blank" class="btn btn-info btn-sm">
+        <i class="bi bi-printer"></i> Imprimir Listado de prestamos
+    </a>
+</div>
 <div class="container">
     <h2>Lista de Préstamos</h2>
     
